@@ -39,7 +39,7 @@ class Checker(object):
         self._tc = testCase 
 
 
-    ## checks scalar tree
+    ## checks field tree
     # \param f pninx file object    
     # \param fname file name
     # \param children number of detector children   
@@ -95,6 +95,114 @@ class Checker(object):
         self._tc.assertEqual(at.value,"NXdetector")
             
         return det
+
+
+    ## checks attribute tree
+    # \param f pninx file object    
+    # \param fname file name
+    # \param gattributes number of group attributes
+    # \param fattributes number of field attributes
+    # \returns detector group object    
+    def checkAttributeTree(self, f, fname, gattributes, fattributes):
+        self._tc.assertEqual("%s/%s" % ( os.getcwd(), f.name), fname)
+        self._tc.assertEqual(6, f.nattrs)
+        self._tc.assertEqual( f.attr("file_name").value, fname)
+        self._tc.assertTrue(f.attr("NX_class").value,"NXroot")
+        self._tc.assertEqual(f.nchildren, 2)
+            
+        en = f.open("entry1")
+        self._tc.assertTrue(en.valid)
+        self._tc.assertEqual(en.name,"entry1")
+        self._tc.assertEqual(en.nattrs,1)
+        self._tc.assertEqual(en.nchildren, 1)
+
+        at = en.attr("NX_class")
+        self._tc.assertTrue(at.valid)
+        self._tc.assertTrue(hasattr(at.shape,"__iter__"))
+        self._tc.assertEqual(len(at.shape),0)
+        self._tc.assertEqual(at.dtype,"string")
+        self._tc.assertEqual(at.name,"NX_class")
+        self._tc.assertEqual(at.value,"NXentry")
+
+        ins = en.open("instrument")
+        self._tc.assertTrue(ins.valid)
+        self._tc.assertEqual(ins.name,"instrument")
+        self._tc.assertEqual(ins.nattrs,1)
+        self._tc.assertEqual(ins.nchildren, 2)
+        
+            
+        at = ins.attr("NX_class")
+        self._tc.assertTrue(at.valid)
+        self._tc.assertTrue(hasattr(at.shape,"__iter__"))
+        self._tc.assertEqual(len(at.shape),0)
+        self._tc.assertEqual(at.dtype,"string")
+        self._tc.assertEqual(at.name,"NX_class")
+        self._tc.assertEqual(at.value,"NXinstrument")
+
+        det = ins.open("detector")
+        self._tc.assertTrue(det.valid)
+        self._tc.assertEqual(det.name,"detector")
+        self._tc.assertEqual(det.nattrs, 1 + gattributes)
+        self._tc.assertEqual(det.nchildren, 0)
+
+        det = ins.open("detector")
+        self._tc.assertTrue(det.valid)
+        self._tc.assertEqual(det.name,"detector")
+        self._tc.assertEqual(det.nattrs, 1 + gattributes)
+        self._tc.assertEqual(det.nchildren, 0)
+
+
+        field = ins.open("counter")
+        self._tc.assertTrue(field.valid)
+        self._tc.assertEqual(field.name,"counter")
+        self._tc.assertEqual(field.nattrs, 1 + fattributes)
+            
+        at = det.attr("NX_class")
+        self._tc.assertTrue(at.valid)
+        self._tc.assertTrue(hasattr(at.shape,"__iter__"))
+        self._tc.assertEqual(len(at.shape),0)
+        self._tc.assertEqual(at.dtype,"string")
+        self._tc.assertEqual(at.name,"NX_class")
+        self._tc.assertEqual(at.value,"NXdetector")
+            
+        return det,field
+
+
+
+    ## checks  scalar attributer
+    # \param det detector group
+    # \param name field name
+    # \param dtype numpy type
+    # \param nxtype nexus type
+    # \param values  original values
+    # \param error data precision
+    def checkScalarAttribute(self, det, name, dtype, values, error = 0):
+
+        cnt = det.attr(name)
+        self._tc.assertTrue(cnt.valid)
+        self._tc.assertEqual(cnt.name,name)
+        self._tc.assertTrue(hasattr(cnt.shape, "__iter__"))
+        self._tc.assertEqual(len(cnt.shape), 0)
+        self._tc.assertEqual(cnt.shape, ())
+        self._tc.assertEqual(cnt.dtype, dtype)
+        # pninx is not supporting reading string areas 
+        if not isinstance(values, str):
+            value = cnt.value
+            if self._isNumeric(value):
+                self._tc.assertTrue(abs(values - value) <= error)
+            else:
+                self._tc.assertEqual(values,value)
+        if self._isNumeric(cnt.value):
+            if not self._isNumeric(values):
+#                    print "BOOL: ", values[i] ,cnt[i]
+                self._tc.assertEqual(Types.Converters.toBool(values),cnt.value)
+            else:
+                self._tc.assertTrue(abs(values - cnt.value) <= error)
+        else:
+            self._tc.assertEqual(values, cnt.value)
+            
+
+
 
 
     ## checks if instance is numeric
