@@ -1,5 +1,6 @@
 2013-XX-XX Jan Kotanski <jankotan@gmail.com>
 	* adding support for dimension casting
+	* allowing storing client attributes of numewric types
 	* adding tests
 	* tagged as 1.0.8
 
